# ChangLi

./: .deployment-results.json  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
design/: installer-preview.html
docs/: MULTI_AGENT_RELEASE_WORKFLOW.md  installer-ui-redesign.md  requirements.md  technical-design.md
docs/plans/: website-subscription-download.md
installer-shell/: Cargo.toml  build.rs
installer-shell/src/: main.rs
scripts/: comment_game_overlay.py  create_icon.py  deployment-monitor.sh  download-windows-deps.sh  fix_drag.py  fix_settings.py  generate-version-info.mjs  move_sections.py  optimistic_updates.py  post-build.sh  regen-poster-base64.py  remove_ci_downloads.py  remove_env_deps.py  remove_game_overlay.py  remove_site_management.py  simplify_bind_modal.py  version-release.sh
sketches/001-compact-sidebar/: README.md  index.html
sketches/002-spacious-cards/: README.md  index.html
sketches/002-spacious-cards/actor/: actor-detail.html  index.html
sketches/002-spacious-cards/detail/: index.html
sketches/002-spacious-cards/player/: index.html
sketches/002-spacious-cards/search/: index.html
sketches/003-hybrid-layout/: README.md  index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: install.nsi  installer.nsi  installer.nsi.bak
src-tauri/resources/mpv/: README.md
src-tauri/resources/nip/: changli-disable-overlay.xml
src-tauri/src/: db.rs  downloader.rs  html_parser.rs  http.rs  keyword_extractor.rs  main.rs  migrations.rs  parser.rs  player.rs  rss_parser.rs  scanner.rs  site_config.rs  storage.rs
src-tauri/src/preview/: mod.rs  thumbnail_service.rs
src/components/: BubbleSelect.tsx  ConfirmDialog.tsx  DatePicker.tsx  FloatingActions.tsx  HorizontalScroll.tsx  Layout.tsx  OnboardingTutorial.tsx  PageMotion.tsx  ScanLogicModal.tsx  ScrollToTop.tsx  SubscriptionManager.tsx  Switch.tsx  ToastProvider.tsx
src/data/: quotes.ts
src/hooks/: usePreviewThumb.ts
src/pages/: ActorDetail.tsx  Actors.tsx  CompletionGallery.tsx  Downloads.tsx  Home.tsx  Library.tsx  Player.tsx  Search.tsx  SeriesDetail.tsx  Settings.tsx  Subscriptions.tsx  Tags.tsx  VideoDetail.tsx
src/store/: libraryStore.ts  subscriptionStore.ts
src/utils/: api.ts  categoryUpdateRunner.ts  libraryNavigation.ts  media.tsx  memoryCleanup.ts  mpv-bridge.ts  navVisibility.ts  notify.ts  useSecondConfirm.ts
