[package]
name = "changli-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
rfd = "0.15"
serde_json = "1"
tao = "0.30"
wry = "0.47"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
