[package]
name = "changli"
version = "0.5.0"
description = "长离 - 全功能视频管理播放平台"
authors = ["YeSuper"]
license = "MIT"
repository = "https://github.com/YeSuper-git/ChangLi"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-sidecar", "http-all", "fs-all", "shell-execute", "path-all", "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
walkdir = "2.4"
dirs = "5.0"
open = "5.0"
regex = "1.12.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
