[package]
name = "changli"
version = "1.6.7"
description = "长离 - 全功能视频管理播放平台"
authors = ["YeSuper"]
license = "MIT"
repository = "https://github.com/YeSuper-git/ChangLi"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.17"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
walkdir = "2.4"
dirs = "5.0"
open = "5.0"
regex = "1.12.4"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "tiff", "jpeg", "webp"] }
base64 = "0.22"
tauri-plugin-libmpv = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
